@@ -13,8 +13,12 @@ plan tests => 1;
 
 #HeapBlock class is not public API
 
+my $can_fork = $Config{d_fork} || $Config{d_pseudofork} ||
+		(($^O eq 'MSWin32' || $^O eq 'NetWare') and
+		$Config{useithreads} and $Config{ccflags} =~ /-DPERL_IMPLICIT_SYS/);
+
 SKIP: {
-    skip("This Perl doesn't have ithreads", 1) if ! $Config{'useithreads'};
+    skip("This Perl doesn't have fork", 1) if ! $can_fork;
     #50 megs should be enough to force a VirtualAlloc and a VirtualFree
     my $ptrobj = new Win32::API::Callback::HeapBlock 5000000;
     my $pid = fork();
